git-svn-id: svn://10.22.3.84/windrv-learning/trunk@73 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/cancel/exe/exe_cancel.vcxproj
+++ b/wdk7-samples/cancel/exe/exe_cancel.vcxproj
@@ -21,6 +21,7 @@
     <ProjectGuid>{A33FD2BA-B4AE-4C44-A512-FCF87D0F9976}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>enum</RootNamespace>
+    <ProjectName>exe-cancel</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
