git-svn-id: svn://10.22.3.84/windrv-learning/trunk@75 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/cancel/sys/sys_cancel_vs2010.vcxproj
+++ b/wdk7-samples/cancel/sys/sys_cancel_vs2010.vcxproj
@@ -54,7 +54,7 @@
     <LinkIncremental>false</LinkIncremental>
     <GenerateManifest>false</GenerateManifest>
     <TargetExt>.sys</TargetExt>
-    <TargetName>wdk7cancel</TargetName>
+    <TargetName>wdk_cancel</TargetName>
     <OutDir>$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -65,7 +65,7 @@
     <LinkIncremental>false</LinkIncremental>
     <GenerateManifest>false</GenerateManifest>
     <TargetExt>.sys</TargetExt>
-    <TargetName>wdk7cancel</TargetName>
+    <TargetName>wdk_cancel</TargetName>
     <OutDir>$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
