--- a/wdk7-samples/cancel/exe-once/exe_cancel-once.vcxproj
+++ b/wdk7-samples/cancel/exe-once/exe_cancel-once.vcxproj
@@ -26,10 +26,10 @@
     <ClInclude Include="testapp.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{A33FD2BA-B4AE-4C44-A512-FCF87D0F9976}</ProjectGuid>
+    <ProjectGuid>{4E1FCF88-7B2A-4F14-B4A4-C0BA0501F8B8}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>enum</RootNamespace>
-    <ProjectName>exe-cancel</ProjectName>
+    <ProjectName>exe-cancel-once</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -72,9 +72,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <TargetName>exe-once</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <TargetName>exe-once</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
