temp, crash when remote debugging with F5
git-svn-id: svn://10.22.3.84/windrv-learning/trunk@93 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/cancel/exe-once/exe_cancel-once.vcxproj
+++ b/wdk7-samples/cancel/exe-once/exe_cancel-once.vcxproj
@@ -29,7 +29,7 @@
     <ProjectGuid>{4E1FCF88-7B2A-4F14-B4A4-C0BA0501F8B8}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>enum</RootNamespace>
-    <ProjectName>exe-cancel-once</ProjectName>
+    <ProjectName>cancel-once</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -72,17 +72,19 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <TargetName>exe-once</TargetName>
+    <TargetName>cancel-once</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <TargetName>exe-once</TargetName>
+    <TargetName>cancel-once</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <TargetName>cancel-once</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <TargetName>cancel-once</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
