--- a/wdk7-samples/toaster/wdm/func/featured1_vs2010/featured1_vs2010.vcxproj
+++ b/wdk7-samples/toaster/wdm/func/featured1_vs2010/featured1_vs2010.vcxproj
@@ -208,12 +208,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\featured1\POWER.C" />
+    <ClCompile Include="..\featured1\Power.C" />
     <ClCompile Include="..\featured1\toaster.c" />
     <ClCompile Include="..\featured1\wmi.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\featured1\power.h" />
+    <ClInclude Include="..\featured1\Power.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\featured1\toaster.mof">
