Add featured2 vcxproj
git-svn-id: svn://10.22.3.84/windrv-learning/trunk@137 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/toaster/wdm/func/featured2/toaster.RC
+++ b/wdk7-samples/toaster/wdm/func/featured2/toaster.RC
@@ -4,7 +4,7 @@
 
 #define VER_FILETYPE                VFT_DRV
 #define VER_FILESUBTYPE             VFT2_DRV_SYSTEM
-#define VER_FILEDESCRIPTION_STR     "Toaster Device Driver"
+#define VER_FILEDESCRIPTION_STR     "Toaster Device Driver2"
 #define VER_INTERNALNAME_STR        "toaster.sys"
 #define VER_ORIGINALFILENAME_STR    "toaster.sys"
 
