--- a/wdk7-samples/toaster/wdm/bus_vs2010/bus_vs2010.vcxproj
+++ b/wdk7-samples/toaster/wdm/bus_vs2010/bus_vs2010.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{8DFA3AFC-7522-4FEA-B604-44CEB4AEA350}</ProjectGuid>
-    <ProjectName>busenum_wdm</ProjectName>
+    <ProjectName>wdm_busenum</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
