--- a/wdk7-samples/toaster/wdm/func/featured1_vs2010/featured1_vs2010.vcxproj
+++ b/wdk7-samples/toaster/wdm/func/featured1_vs2010/featured1_vs2010.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{123F5DA6-8249-4143-AAA0-984EB2A30003}</ProjectGuid>
-    <ProjectName>toaster_wdm_featured1</ProjectName>
+    <ProjectName>wdm_toaster_featured1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
