--- a/wdk7-samples/toaster/wdm/func/featured2_vs2010/featured2_vs2010.vcxproj
+++ b/wdk7-samples/toaster/wdm/func/featured2_vs2010/featured2_vs2010.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{AAE14642-CB46-449B-B30F-59061A6DE9E0}</ProjectGuid>
-    <ProjectName>toaster_wdm_featured2</ProjectName>
+    <ProjectName>wdm_toaster_featured2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
