--- a/wdk7-samples/toaster/wdm/func/incomplete1_vs2010/incomplete1_vs2010.vcxproj
+++ b/wdk7-samples/toaster/wdm/func/incomplete1_vs2010/incomplete1_vs2010.vcxproj
@@ -23,7 +23,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{123F5DA6-8249-4143-AAA0-984EB2A38A13}</ProjectGuid>
-    <ProjectName>toaster_wdm_incomplete1</ProjectName>
+    <ProjectName>wdm_toaster_incomplete1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
