--- a/wdk7-samples/toaster/kmdf/func_simple_vs2010/func_simple_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/func_simple_vs2010/func_simple_vs2010.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{AAE14642-CB46-449B-B30F-2016CCCC0020}</ProjectGuid>
-    <ProjectName>kmdf_func_simple</ProjectName>
+    <ProjectName>kmdf_toast_simple</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -59,6 +59,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <GenerateManifest>false</GenerateManifest>
+    <TargetName>kmdf_toast_simple</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -70,6 +71,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <GenerateManifest>false</GenerateManifest>
+    <TargetName>kmdf_toast_simple</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -127,7 +129,6 @@
       <Optimization>Full</Optimization>
     </ClCompile>
     <Link>
-      <OutputFile>$(OutDir)\$(ProjectName).sys</OutputFile>
       <OptimizeReferences>true</OptimizeReferences>
       <RandomizedBaseAddress>
       </RandomizedBaseAddress>
@@ -198,7 +199,6 @@
       <Optimization>Full</Optimization>
     </ClCompile>
     <Link>
-      <OutputFile>$(OutDir)\$(ProjectName).sys</OutputFile>
       <OptimizeReferences>true</OptimizeReferences>
       <RandomizedBaseAddress>
       </RandomizedBaseAddress>
