--- a/wdk7-samples/toaster/virtualddk.props
+++ b/wdk7-samples/toaster/virtualddk.props
@@ -4,6 +4,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <TargetExt>.sys</TargetExt>
+    <ExecutablePath>$(WDKPATH)\bin\x86;$(ExecutablePath)</ExecutablePath>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
