--- a/wdk7-samples/toaster/kmdf/bus_static_vs2010/bus_static_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/bus_static_vs2010/bus_static_vs2010.vcxproj
@@ -100,7 +100,7 @@
       <IgnoreAllDefaultLibraries>true</IgnoreAllDefaultLibraries>
       <SubSystem>Native</SubSystem>
       <Driver>Driver</Driver>
-      <EntryPointSymbol>DriverEntry</EntryPointSymbol>
+      <EntryPointSymbol>FxDriverEntry@8</EntryPointSymbol>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
