Add more FxDriverEntry to .vcxproj
git-svn-id: svn://10.22.3.84/windrv-learning/trunk@160 34977f82-1c41-1c46-8be5-c6b895e38539

--- a/wdk7-samples/toaster/kmdf/bus_static_vs2010/bus_static_vs2010.vcxproj
+++ b/wdk7-samples/toaster/kmdf/bus_static_vs2010/bus_static_vs2010.vcxproj
@@ -100,7 +100,7 @@
       <IgnoreAllDefaultLibraries>true</IgnoreAllDefaultLibraries>
       <SubSystem>Native</SubSystem>
       <Driver>Driver</Driver>
-      <EntryPointSymbol>FxDriverEntry@8</EntryPointSymbol>
+      <EntryPointSymbol>FxDriverEntry</EntryPointSymbol>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -171,7 +171,7 @@
       <IgnoreAllDefaultLibraries>true</IgnoreAllDefaultLibraries>
       <SubSystem>Native</SubSystem>
       <Driver>Driver</Driver>
-      <EntryPointSymbol>DriverEntry</EntryPointSymbol>
+      <EntryPointSymbol>FxDriverEntry</EntryPointSymbol>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
